--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <h4 class="text-white mb-4">Our Office</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>1500 Pennsylvania Avenue, NW, Washington, D.C.</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>1-202-622-2000</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@treasury.gov</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@ustreasury-gov.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://twitter.com/palmaryventures"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://facebook.com/palmaryventures"><i class="fab fa-facebook-f"></i></a>
