--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                     <a href="#" class="nav-item nav-link">Contact</a>
                 </div>
                 <div class="d-none d-lg-flex ms-2">
-                    <a class="btn btn-light btn-sm-square rounded-circle ms-3" href="https://facebook.com/palmaryventures">
+                    <a class="btn btn-light btn-sm-square rounded-circle ms-3" href="https://facebook.com/USTreasuryDept">
                         <small class="fab fa-facebook-f text-primary"></small>
                     </a>
-                    <a class="btn btn-light btn-sm-square rounded-circle ms-3" href="https://twitter.com/palmaryventures">
+                    <a class="btn btn-light btn-sm-square rounded-circle ms-3" href="https://twitter.com/ustreasury">
                         <small class="fab fa-twitter text-primary"></small>
                     </a>
-                    <a class="btn btn-light btn-sm-square rounded-circle ms-3" href="https://linkedin.com/in/palmaryventures">
+                    <a class="btn btn-light btn-sm-square rounded-circle ms-3" href="https://www.linkedin.com/company/us-treasury">
                         <small class="fab fa-linkedin-in text-primary"></small>
                     </a>
                 </div>
@@ -118,12 +118,12 @@
                     <h4 class="text-white mb-4">Our Office</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>1500 Pennsylvania Avenue, NW, Washington, D.C.</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>1-202-622-2000</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@ustreasury-gov.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@ustreasury-custodial.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://twitter.com/palmaryventures"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://facebook.com/palmaryventures"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://youtube.com/palmaryventures"><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://linkedin.com/in/palmaryventures"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://www.facebook.com/USTreasuryDept"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://youtube.com/@ustreasgov"><i class="fab fa-youtube"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://www.linkedin.com/company/us-treasury"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 
