--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>1-202-622-2000</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@ustreasury-custodial.com</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://twitter.com/palmaryventures"><i class="fab fa-twitter"></i></a>
+                        <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://twitter.com/ustreasury"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://www.facebook.com/USTreasuryDept"><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://youtube.com/@ustreasgov"><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href="https://www.linkedin.com/company/us-treasury"><i class="fab fa-linkedin-in"></i></a>
